--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,10 +7,29 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" src="../src/index.css">
-  <title>Code</title>
+  <link rel="stylesheet" src="../src/styles/index.css">
+  <title>Music</title>
 </head>
 <body>
+  <div id="options">
+    <a href="home.html" target="">
+        <h3 id="home">Home</h3>
+    </a>
+    <a href="pricing.html">
+        <h3 id="pricing">Pricing</h3>
+    </a>
+      <a href="signup.html">     
+          <h3 id="sign-up">Sign Up</h3>
+    </a>
+    <a href="login.html" target=".">
+          <h3 id="log-in">Log In</h3>
+    </a>
+  </div>
+
+  <main></main>
+
   <div id="root"></div>
+
+  <section></section>
 </body>
 </html>
