fixed = better background, search it up if you forget what im talking about

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,11 +8,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" src="../src/styles/index.css">
+
   <title>Music</title>
 </head>
 <body>
   <div id="options">
-    <a href="home.html" target="">
+    <a href="home.html">
         <h3 id="home">Home</h3>
     </a>
     <a href="pricing.html">
@@ -21,13 +22,15 @@
       <a href="signup.html">     
           <h3 id="sign-up">Sign Up</h3>
     </a>
-    <a href="login.html" target=".">
+    <a href="login.html">
           <h3 id="log-in">Log In</h3>
     </a>
+    </div>
   </div>
 
   <main></main>
 
+  
   <div id="root"></div>
 
   <section></section>
