--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" src="../src/styles/index.css">
-
+  <script defer type="module" src="../src/index.js"></script>
   <title>Music</title>
 </head>
 <body>
