--- a/app/public/signup.html
+++ b/app/public/signup.html
@@ -68,6 +68,7 @@
         border-radius: 25px;
         padding: 23px;
         margin-top: 20px;
+        margin-bottom: 20px;
         transition: .1s;
       }
 
