done, pricing and login don't work, but theey're not supposed to

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <title>Home</title>
     <style>
         :root {
@@ -57,8 +60,16 @@
             opacity: 1.0;
         }
 
+        #player h1 {
+            margin-top:25%;
+            font-family: "Poppins";
+            text-align: center;
+
+        }
+
         audio {
-            margin-top: 120%;
+            /* margin-top: 120%; */
+            margin-top: 74%;
             margin-left: 15%;
         }
 
@@ -80,6 +91,7 @@
     </div> -->
 
     <div id="player">
+        <h1>Cannot play due to loss of brain cells</h1>
         <audio class="my_audio" controls preload="none">
             <source src="app/src/music/LilNasX-Panini.mp3" type="audio/mpeg">
         </audio>
