--- a/app/public/index.html
+++ b/app/public/index.html
@@ -16,13 +16,13 @@
     <a href="home.html">
         <h3 id="home">Home</h3>
     </a>
-    <a href="pricing.html">
+    <a href="#">
         <h3 id="pricing">Pricing</h3>
     </a>
       <a href="signup.html">     
           <h3 id="sign-up">Sign Up</h3>
     </a>
-    <a href="login.html">
+    <a href="#">
           <h3 id="log-in">Log In</h3>
     </a>
     </div>
